--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div id="parent" >
+<!-- <div id="parent" >
 	<input id="btnOpen" style="height: 30px" type="button" ej-button class="ejinputtext" value="Click to open Dialog" (click)="onClick($event)" *ngIf="button_display"/>
 	<ej-dialog id="basicDialog" #dialog title="Blah" [(enableResize)]="resize" containment="#parent" (close)="onClose($event)">
-		Last update: 5/3/2018
+		Last update: 5/4/2018
 	</ej-dialog>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
