--- a/src/app/diagram/diagram.component.html
+++ b/src/app/diagram/diagram.component.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html>
-   <head> 
-    <link href="//cdn.syncfusion.com/14.3.0.49/js/web/flat-azure/ej.web.all.min.css" rel="stylesheet" />
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-    <script src="http://cdn.syncfusion.com/js/assets/external/jsrender.min.js" type="text/javascript"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js">
-    </script>
-    <script src="http://cdn.syncfusion.com/14.3.0.49/js/web/ej.web.all.min.js" type="text/javascript"></script>
-    <script src ="http://cdn.syncfusion.com/14.3.0.49/js/common/ej.angular2.min.js"></script>
-    <script src="systemjs.config.js"></script>
-  </head>
-  <body>
-    <div class="control_section">
-      <div class="symPalette_section">
-          <ej-symbolpalette   id="symbolpalette" diagramId="diagramCore" 
-          [palettes]="palettes" height="600px" width="250px" 
-          [paletteItemWidth]="50" 
-          [paletteItemHeight]="50" 
-          [previewWidth]="100" 
-          [previewHeight]="100" 
-          [showPaletteItemText]="showPaletteItemText">
-          </ej-symbolpalette>
-      </div>
-      <div class="middle_section"></div>
-      <div class="diagram_section">
-        <ej-diagram id="diagramCore" width="900px" height="600px" 
-          [pageSettings]="pageSettings" 
-          [dataSourceSettings]="dataSourceSettings" 
-          [layout]="layout" 
-          [defaultSettings]="defaultSettings" 
-          [nodeTemplate]="nodeTemplate">
-        </ej-diagram>
-      </div>
+
+<head>
+  <link href="//cdn.syncfusion.com/14.3.0.49/js/web/flat-azure/ej.web.all.min.css" rel="stylesheet" />
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+  <script src="node_modules/reflect-metadata/Reflect.js"></script>
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
+  <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+  <script src="http://cdn.syncfusion.com/js/assets/external/jsrender.min.js" type="text/javascript"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js">
+  </script>
+  <script src="http://cdn.syncfusion.com/14.3.0.49/js/web/ej.web.all.min.js" type="text/javascript"></script>
+  <script src="http://cdn.syncfusion.com/14.3.0.49/js/common/ej.angular2.min.js"></script>
+
+  <script src="systemjs.config.js"></script>
+</head>
+
+<body>
+  <div class="control_section">
+    <div class="symPalette_section">
+      <ej-symbolpalette id="symbolpalette" diagramId="diagramCore" [palettes]="palettes" height="600px" width="250px" [paletteItemWidth]="50"
+        [paletteItemHeight]="50" [previewWidth]="100" [previewHeight]="100" [showPaletteItemText]="showPaletteItemText">
+      </ej-symbolpalette>
     </div>
-  </body>
+    <div class="middle_section"></div>
+    <div class="diagram_section">
+      <ej-diagram id="diagramCore" width="900px" height="600px" [pageSettings]="pageSettings" [dataSourceSettings]="dataSourceSettings"
+        [layout]="layout" [defaultSettings]="defaultSettings" [nodeTemplate]="nodeTemplate">
+      </ej-diagram>
+    </div>
+  </div>
+  <br>
+  <div>
+    <input type="button" value="savediagram" (click)="savediagram()" />
+  </div>
+</body>
+
 </html>
