add load json from db

--- a/src/app/diagram/diagram.component.html
+++ b/src/app/diagram/diagram.component.html
@@ -40,6 +40,7 @@
   <div>
     <input type="button" value="Save Diagram" (click)="saveDiagram(diagramName.value)" />
     <input type="button" value="Update Diagram" (click)="updateDiagram(diagramName.value)" />
+    <input type="button" value="Load Diagram" (click)="loadDiagram()" />
   </div>
 </body>
 
